--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ authors = [
    "Fabian Freyer <fabian.freyer@physik.tu-berlin.de>"
    ]
 description = "Simplified interface to libc::sysctl"
-keywords = ["sysctl", "sysfs", "freebsd", "macos", "linux"]
+keywords = ["sysctl", "sysfs", "freebsd", "macos", "linux", "netbsd"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/johalun/sysctl-rs"
@@ -20,6 +20,7 @@ targets = [
   "i686-unknown-linux-gnu",
   "x86_64-apple-darwin",
   "x86_64-unknown-freebsd",
+  "x86_64-unknown-netbsd",
   "x86_64-unknown-linux-gnu",
 ]
 
