--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ targets = [
 
 [dependencies]
 enum-as-inner = "0.6.0"
-libc = "^0.2.34"
+libc = { git = "https://github.com/0323pin/libc", rev = "188fd253c449ae322f10f76776aff4834c5a69e2" }
 byteorder = "^1.4.3"
 thiserror = "^1.0.32"
 bitflags = "^2"
